--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,53 @@
-
+/*WEBPAGE IS PRESENTLY ONLY OPTIMIZED FOR DESKTOP; MOBILE OPTIMIZATION IS HOPEFULLY FORTHCOMING*/
+		body {background-color: #7ed957; margin: 0; padding: 0;}
+		
+		/*BODY STYLE + OPACITY ANIMATION*/
+		* {margin: 0; padding: 0; border: 0; outline: 0; font-size: 100%; vertical-align: baseline;}
+		#div {opacity: 0; -webkit-animation-name: body; -webkit-animation-duration: 1s; animation-fill-mode: forwards; animation-delay: 3.5s; display: block; padding-top: 0;}
+            @-webkit-keyframes body {from {opacity: 0;} to {opacity: 1.0}}
+            @keyframes body {from {opacity: 0} to {opacity: 1.0}}
+		
+		/*CUSTOM FONTS*/
+			/*Bebas Neue*/
+				@font-face {font-family: "Bebas Neue"; src: url("BebasNeue-Regular.ttf")}	
+			/*Baron*/
+				@font-face {font-family: "Baron Neue"; src: url("BaronNeue.otf")}
+			/*Inter*/
+				@font-face {font-family: "Inter-Regular"; src: url("Inter-Regular.ttf")}
+			/*Archivo Narrow*/
+				@font-face {font-family: "Archivo Narrow"; src: url("ArchivoNarrow-VariableFont_wght.ttf")}
+			
+		/*NAVBAR*/
+			#navbar {overflow: hidden;background-color: #ffffff; opacity: 1; z-index: 1; width: 100% ! important; opacity: 0;text-align: center; font-family: Inter-Regular; text-decoration: bold; font-size: 22.5px;}
+			#navbar a {float: left;display: block; color: #008037; text-align: center;padding: 14px 16px;text-decoration: none;font-size: 22.5px;}
+			#navbar a:hover {background-color: #008037; color: #ffffff; transition: 0.8s ease;}
+			#navbar a:active {text-decoration: bold; transition: 0.8s ease;}
+			/*NAVBAR STICKY*/
+				.sticky {position: fixed; top: 0; width: 100%;}
+					.sticky + .content {padding-top: 60px;}
+			/*NAVBAR ANIMATION*/
+				.navbaranimation {-webkit-animation-name: navbaranimation; -webkit-animation-duration: 1s; animation-fill-mode: forwards; animation-delay: 5.5s;}
+					@webkit-keyframes navbaranimation {from {opacity: 0;} to {opacity: 1.0;}}
+					@keyframes navbaranimation {from {opacity: 0;} to {opacity: 1.0;}}
+					
+		/*WINDOW EFFECT*/
+			/*INTRODUCTION WINDOW*/
+				 #homebackground {background-image: url('https://www.unisanuk.com/app/uploads/antoine-giret-7_TSzqJms4w-unsplash-scaled.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: 100% 100%; -webkit-animation-name: homebackground; -webkit-animation-duration: 1s; animation-fill-mode: forwards; animation-delay: 3.5s; opacity: 0; font-family: Archivo Narrow; color: #ffffff; text-align: center; padding: 0; padding-top: 0; margin: 0;}
+					@-webkit-keyframes homebackground {from {opacity: 0;} to {opacity: 1.0}}
+					@keyframes homebackground {from {opacity: 0;} to {opacity: 1.0;}}
+				 #homebackground-translucenttext {background: rgba(0, 0, 0, 0.6); -moz-box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.6);-webkit-box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.6); box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.6); margin: 2; padding: 2; -webkit-animation-name: homebackground-translucenttext-fadein; -webkit-animation-duration: 1s; animation-fill-mode: forwards; animation-delay: 4.5s; opacity: 0;}
+					@-webkit-keyframes homebackground-translucenttext-fadein {from {opacity: 0;} to {opacity: 1.0}}
+					@keyframes homebackground {from {opacity: 0;} to {opacity: 1.0}}
+									
+					/*BOUNCING ARROW*/
+						.homedownarrow {position: fixed; bottom: 45%; left: 50%;}
+							.bounce {-moz-animation: bounce 3s infinite; -webkit-animation: bounce 3s infinite; animation: bounce 3s infinite;}
+								@-moz-keyframes bounce {0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0); transform: translateY(0);} 40% {-moz-transform: translateY(-20px); transform: translateY(-20px);} 60% {-moz-transform: translateY(-5px); transform: translateY(-5px);}}
+								@-webkit-keyframes bounce {0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0); transform: translateY(0);} 40% {-webkit-transform: translateY(-20px); transform: translateY(-20px);} 60% {-webkit-transform: translateY(-5px); transform: translateY(-5px);}}
+								@keyframes bounce {0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0); -ms-transform: translateY(0); -webkit-transform: translateY(0); transform: translateY(0);} 40% {-moz-transform: translateY(-20px);-ms-transform: translateY(-20px); -webkit-transform: translateY(-20px); transform: translateY(-20px);} 60% {-moz-transform: translateY(-5px); -ms-transform: translateY(-5px); -webkit-transform: translateY(-5px); transform: translateY(-5px);}}	
+				
+		/*LOADER ICON*/
+			#loader {position: absolute; position: fixed;left: 50%;top: 50%;z-index: -1;width: 150px;height: 150px;margin: -75px 0 0 -75px;border: 16px solid #c0c0c0; border-radius: 50%;border-top: 16px solid turquoise;border-right: 16px solid orange;border-bottom: 16px solid gold; width: 120px;height: 120px;-webkit-animation: spin 2s linear infinite;animation: spin 2s linear infinite;animation-timing-function: cubic-bezier(0.1, 0.7, 0.8, 0.1);}
+				@-webkit-keyframes spin {0% { -webkit-transform: rotate(0deg); } 100% { -webkit-transform: rotate(360deg); }}
+				@keyframes spin {0% { transform: rotate(0deg); }100% { transform: rotate(360deg); }}
+            #loadermiddle {position: absolute; position: fixed; text-align: center; z-index: -1}
